comecei escrever conteúdo.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
+<head><!--  -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,16 @@
 <body>
     <main>
         <header>
-            <h1>Título de site</h1>
+            <h1>Cursos grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque perspiciatis nesciunt sint. Adipisci fugit, perferendis molestias corporis eligendi laborum sunt, aliquam in repellat asperiores illo numquam nesciunt soluta veritatis fugiat.</p>
         </article>
         <article>
-            <h1>Artigo 002</h1>
-            <p>texto artigo 002</p>
-        </article>
-    </main>
+            <h1>Cursos de JavaScript</h1>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque natus repudiandae quasi quae doloremque neque a suscipit hic tempore. Vel aliquam nulla cumque iusto amet consequatur soluta error et eligendi!</p>
+        
+        </main>
 </body>
 </html>
