--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque perspiciatis nesciunt sint. Adipisci fugit, perferendis molestias corporis eligendi laborum sunt, aliquam in repellat asperiores illo numquam nesciunt soluta veritatis fugiat.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque perspiciatis nesciunt sint. Adipisci fugit, perferendis molestias corporis eligendi laborum sunt, aliquam in repellat asperiores illo numquam nesciunt soluta veritatis fugiat.</p>
         </article>
         <article>
             <h2>Cursos de JavaScript</h2>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque natus repudiandae quasi quae doloremque neque a suscipit hic tempore. Vel aliquam nulla cumque iusto amet consequatur soluta error et eligendi!</p>
+            <p><abbr title="JavaScript">javaScript</abbr> ipsum dolor sit, amet consectetur adipisicing elit. Itaque natus repudiandae quasi quae doloremque neque a suscipit hic tempore. Vel aliquam nulla cumque iusto amet consequatur soluta error et eligendi!</p>
     </main>
 </body>
 </html>
