--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head><!--  -->
+<html lang=" pt-br " >
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +10,21 @@
 <body>
     <main>
         <header>
-            <h1>Cursos grátis</h1>
+            <h1>Cursos Grátis</h1>
+            <img src="curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
-            <p>A <abbr title="HyperText Markup Language">HTML</abbr> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloremque perspiciatis nesciunt sint. Adipisci fugit, perferendis molestias corporis eligendi laborum sunt, aliquam in repellat asperiores illo numquam nesciunt soluta veritatis fugiat.</p>
+            <img class="lado" src="curso-html-css.png" alt="Curso de HTML">
+            <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ejkb_YpuHWs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <a href="voltar-back.png"><img src="" alt=""></a>
         </article>
         <article>
             <h2>Cursos de JavaScript</h2>
-            <p><abbr title="JavaScript">javaScript</abbr> ipsum dolor sit, amet consectetur adipisicing elit. Itaque natus repudiandae quasi quae doloremque neque a suscipit hic tempore. Vel aliquam nulla cumque iusto amet consequatur soluta error et eligendi!</p>
+            <img class="lado" src="curso-javascript.png" alt="Curso de JavaScript">
+            <p> JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro dos elementos do navegador e acesso HTML por meio do DOM.</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Ptbk2af68e8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </main>
 </body>
 </html>
